src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AP_or_IB_Course_Completed__c</fullName>
        <inlineHelpText>Advanced Placement (AP) or International Baccalaureate (IB) Course Completed.</inlineHelpText>
        <label>AP or IB Course Completed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>n/a (current school does not offer)</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>n/a (prior participant)</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASA_Direct_ID__c</fullName>
        <label>ASA Direct ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASA_Member__c</fullName>
        <description>What ASA groups is the person a part of , Advisory, Focus Group, Consortium</description>
        <label>ASA Member</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASA Board of Directors</fullName>
                </value>
                <value>
                    <fullName>Advisory Board</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Academic_Year__c</fullName>
        <inlineHelpText>This field indicates the Academic Year(s) that this student served as SALT Ambassador</inlineHelpText>
        <label>Academic Year</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Achievement_plan__c</fullName>
        <label>Achievement plan</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3 years of Foreign Language</fullName>
                </value>
                <value>
                    <fullName>3 years of Science</fullName>
                </value>
                <value>
                    <fullName>4 years of English</fullName>
                </value>
                <value>
                    <fullName>4 years of Math</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>CP</fullName>
                </value>
                <value>
                    <fullName>CPA</fullName>
                </value>
                <value>
                    <fullName>Honors</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Date_of_HS_Grad_or_HS_Eq_Cert__c</fullName>
        <inlineHelpText>Actual Date of High School Graduation (or completion of high school equivalency certificate).</inlineHelpText>
        <label>Actual Date of HS Grad (or HS Eq Cert)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Languages__c</fullName>
        <inlineHelpText>What other languages do they speak?</inlineHelpText>
        <label>Additional Languages</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Program_Internship__c</fullName>
        <label>Additional Program: Internship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Program_Other__c</fullName>
        <label>Additional Program: Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_program_participation__c</fullName>
        <label>Additional program participation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Boston Scholar-Athlete</fullName>
                </value>
                <value>
                    <fullName>Bottom line</fullName>
                </value>
                <value>
                    <fullName>Gear Up</fullName>
                </value>
                <value>
                    <fullName>Internship</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PIC</fullName>
                </value>
                <value>
                    <fullName>Project GRAD</fullName>
                </value>
                <value>
                    <fullName>Roxx Map</fullName>
                </value>
                <value>
                    <fullName>Summer Search</fullName>
                </value>
                <value>
                    <fullName>Talented &amp; Gifted</fullName>
                </value>
                <value>
                    <fullName>Tenacity</fullName>
                </value>
                <value>
                    <fullName>uAsprire</fullName>
                </value>
                <value>
                    <fullName>Upward Bound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>If( Is_Deceased__c = TRUE, 0 ,  
  If( Birthdate = NULL , 0 , 
    If( Birthdate &gt; Today(),0 , 
      
        ( ((Today() -  Birthdate ) /365) -  (  MOD( ((Today() - Birthdate) /365),1 )))
      
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_at_Intake__c</fullName>
        <formula>IF(Intake_Date_Time__c=NULL, 
(YEAR(DATEVALUE((Intake_Date_Time__c))) - YEAR(Birthdate)),
(YEAR((Intake_Date__c)) - YEAR(Birthdate))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age at Intake</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <inlineHelpText>Used for the Credit Union channel</inlineHelpText>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ambassador_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Story S-54-16 - Create private contact based on record type</description>
        <label>Ambassador Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SALT Ambassadors &amp; Members</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ambassador_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Put a checkmark in this field to indicate the SALT Ambassador is certified.</inlineHelpText>
        <label>Ambassador Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_of_Lobbying_Time__c</fullName>
        <label>Amount of Lobbying Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Taxable_Income__c</fullName>
        <label>Annual Taxable Income</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$0 -  18,210 (2018)</fullName>
                </value>
                <value>
                    <fullName>$18,211 – 24,690 (2018)</fullName>
                </value>
                <value>
                    <fullName>$24,691 – 31,170 (2018)</fullName>
                </value>
                <value>
                    <fullName>$31,171 – 37,650 (2018)</fullName>
                </value>
                <value>
                    <fullName>$37,651 – 44,130 (2018)</fullName>
                </value>
                <value>
                    <fullName>$44,131 – 50,610 (2018)</fullName>
                </value>
                <value>
                    <fullName>$50,611 – 57,090 (2018)</fullName>
                </value>
                <value>
                    <fullName>$57,091 – 63,570 (2018)</fullName>
                </value>
                <value>
                    <fullName>Over $63,570 (2018)</fullName>
                </value>
                <value>
                    <fullName>Unknown/Not Disclosed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Associated_Travel_Expenses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Associated Travel Expenses?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>At_Risk_Alg_Not_Completed_10th_ATOIS__c</fullName>
        <inlineHelpText>At Risk: Pre-Algebra or Algebra Course Not Successfully Completed by Beginning of 10th Grade (at time of initial selection).</inlineHelpText>
        <label>At Risk: Alg Not Completed 10th (ATOIS)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No algebra (or pre-) by 10th grade start</fullName>
                </value>
                <value>
                    <fullName>Algebra (or pre-) completed by 10th gr</fullName>
                </value>
                <value>
                    <fullName>n/a (not yet available)</fullName>
                </value>
                <value>
                    <fullName>n/a (prior participant)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>At_Risk_Low_GPA_ATOIS__c</fullName>
        <inlineHelpText>At Risk: Low-Grade Point Average (at time of initial selection).</inlineHelpText>
        <label>At Risk: Low GPA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GPA of 2.5 or less</fullName>
                </value>
                <value>
                    <fullName>GPA above 2.5</fullName>
                </value>
                <value>
                    <fullName>n/a (prior participant)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>At_Risk_Reading_LA_or_Math_ATOIS__c</fullName>
        <inlineHelpText>At Risk: Reading/Language Arts or Math Proficiency Not Achieved (at time of initial selection).</inlineHelpText>
        <label>At Risk: Reading/LA or Math (ATOIS)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NOT Proficient in State assessments</fullName>
                </value>
                <value>
                    <fullName>Proficient in State assessments</fullName>
                </value>
                <value>
                    <fullName>n/a (no results)</fullName>
                </value>
                <value>
                    <fullName>n/a (prior participant)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attending_academically_rigorous_program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attending academically rigorous program?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BirthDate_Text__c</fullName>
        <label>BirthDate Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birth_Year__c</fullName>
        <formula>TEXT(YEAR(Birthdate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birth Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthdate_Lead_Mapped__c</fullName>
        <description>Used to store bithdate while lead conversion</description>
        <label>Birthdate Lead Mapped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Breakfast_Lunch_Series__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Breakfast/Lunch Series</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Phone_2__c</fullName>
        <label>Business Phone 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPS_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CPS Advisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPS_Advisor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campus_Stakeholder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Campus Stakeholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Career_Goals__c</fullName>
        <label>Career Goals</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Presenter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this person is willing to co-present a session with ASA please check this box</inlineHelpText>
        <label>Co-Presenter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Communications__c</fullName>
        <description>What type of Communications does this contact recieve.</description>
        <label>Communications</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>School</fullName>
                </value>
                <value>
                    <fullName>Lender/Servicer</fullName>
                </value>
                <value>
                    <fullName>MDHE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Owner_Phone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Owner Phone</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Phone</field>
                <operation>notContain</operation>
                <value>NULL</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Could_Attend_academically_rigorous_progr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Could Attend academically rigorous progr</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Ed_Goal__c</fullName>
        <label>Current Ed Goal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Survey__c</fullName>
        <label>Customer Survey</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Satisfaction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Degrees_Goal__c</fullName>
        <label>Degrees Goal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Associates (2-year) degree</fullName>
                </value>
                <value>
                    <fullName>Bachelor’s Degree</fullName>
                </value>
                <value>
                    <fullName>Certificate/Technical Training Program</fullName>
                </value>
                <value>
                    <fullName>Master’s Degree</fullName>
                </value>
                <value>
                    <fullName>Professional Degree (M.D., J.D.)</fullName>
                </value>
                <value>
                    <fullName>Unsure about plans</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disconnected_Youth__c</fullName>
        <label>Disconnected Youth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>n/a (prior participant)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_Father_have_Associates_Degree__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does Father have Associates Degree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_Father_have_Bachelor_Degree_or_high__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does Father have Bachelor Degree or high</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_Mother_have_Associates_Degree__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does Mother have Associates Degree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_Mother_have_Bachelor_Degree_or_high__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does Mother have Bachelor Degree or high</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Elidgable_Report_Support__c</fullName>
        <formula>ISPICKVAL(Eligibility__c , &quot;Low-Income and First-Gen College&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meets LIFG requirements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligibility__c</fullName>
        <inlineHelpText>Eligibility (at time of initial selection)</inlineHelpText>
        <label>Eligibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academic Risk only (UB)</fullName>
                </value>
                <value>
                    <fullName>First-Gen and academic risk (UB)</fullName>
                </value>
                <value>
                    <fullName>First-Gen College only</fullName>
                </value>
                <value>
                    <fullName>Low-income and academic risk (UB)</fullName>
                </value>
                <value>
                    <fullName>Low-Income and First-Gen College</fullName>
                </value>
                <value>
                    <fullName>Low-income-first-gen-academic risk (UB)</fullName>
                </value>
                <value>
                    <fullName>Low-Income only</fullName>
                </value>
                <value>
                    <fullName>Unknown/Not disclosed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethnic_Type__c</fullName>
        <label>Ethnic Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>African</fullName>
                </value>
                <value>
                    <fullName>Brazilian</fullName>
                </value>
                <value>
                    <fullName>Cantonese</fullName>
                </value>
                <value>
                    <fullName>Cape Verdean</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Filipino</fullName>
                </value>
                <value>
                    <fullName>Haitian</fullName>
                </value>
                <value>
                    <fullName>Hawaiian</fullName>
                </value>
                <value>
                    <fullName>Mandarin</fullName>
                </value>
                <value>
                    <fullName>Pakistanian</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Somalian</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>West Indian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <inlineHelpText>Please select the race as indicated by the student to be used for program reporting.</inlineHelpText>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Race</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Graduation_date__c</fullName>
        <label>Expected Graduation date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Father_s_college__c</fullName>
        <label>Father&apos;s college</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finished_MM101_Courses__c</fullName>
        <label>Finished SALT Courses</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fundamentals</fullName>
                </value>
                <value>
                    <fullName>Educational Planning</fullName>
                </value>
                <value>
                    <fullName>Internships, Income and Careers</fullName>
                </value>
                <value>
                    <fullName>Employment</fullName>
                </value>
                <value>
                    <fullName>Money Management</fullName>
                </value>
                <value>
                    <fullName>Budgeting</fullName>
                </value>
                <value>
                    <fullName>Student Loans</fullName>
                </value>
                <value>
                    <fullName>Student Loan Repayment</fullName>
                </value>
                <value>
                    <fullName>Credit and Debt Management</fullName>
                </value>
                <value>
                    <fullName>Saving and Investing</fullName>
                </value>
                <value>
                    <fullName>Risk Management</fullName>
                </value>
                <value>
                    <fullName>Taxes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Gender</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Govt_Office__c</fullName>
        <description>This field is used to indicate the government office associated to this contact.</description>
        <inlineHelpText>This field is used to indicate the government office associated to this contact.</inlineHelpText>
        <label>Government Office</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Grade_Level_at_Entry__c</fullName>
        <label>Grade Level at Intake</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>6th grade</fullName>
                </value>
                <value>
                    <fullName>7th grade</fullName>
                </value>
                <value>
                    <fullName>8th grade</fullName>
                </value>
                <value>
                    <fullName>Rising 9th grader</fullName>
                </value>
                <value>
                    <fullName>9th grade</fullName>
                </value>
                <value>
                    <fullName>Rising 10th grader</fullName>
                </value>
                <value>
                    <fullName>10th grade</fullName>
                </value>
                <value>
                    <fullName>Rising 11th grader</fullName>
                </value>
                <value>
                    <fullName>11th grade</fullName>
                </value>
                <value>
                    <fullName>Rising 12th grader</fullName>
                </value>
                <value>
                    <fullName>12th grade</fullName>
                </value>
                <value>
                    <fullName>In 4th year of 5-year dual enrollment</fullName>
                </value>
                <value>
                    <fullName>In 5th year of 5-year dual enrollment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>No response/Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_IEP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has IEP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Holiday_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Holiday Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Holiday_Gift__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Holiday Gift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Phone_FOR_WF__c</fullName>
        <label>Home Phone (FOR WF)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Hours_of_Opp__c</fullName>
        <description>Hours of operation</description>
        <label>Hours of Opp.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Size__c</fullName>
        <label>Household Size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INTID__c</fullName>
        <label>INTID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_Source__c</fullName>
        <label>Income Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Child support</fullName>
                </value>
                <value>
                    <fullName>No income</fullName>
                </value>
                <value>
                    <fullName>Signed Statement</fullName>
                </value>
                <value>
                    <fullName>Social Security</fullName>
                </value>
                <value>
                    <fullName>SSI or SSDI</fullName>
                </value>
                <value>
                    <fullName>TAFDC (welfare)</fullName>
                </value>
                <value>
                    <fullName>Unemployment</fullName>
                </value>
                <value>
                    <fullName>Wages/salary</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown/Not Disclosed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intake_Date_Time__c</fullName>
        <label>Intake Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Intake_Date__c</fullName>
        <label>Intake Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intake_Location__c</fullName>
        <label>Intake Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CPS_Intake_location</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>International_School_Communication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to track whether or not the International School contact will receive mass email communications, similar to From The Desk Of emails.</description>
        <label>International School Communication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Converted_from_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Converted from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is Student deceased?</inlineHelpText>
        <label>Is Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Father_College_graduate__c</fullName>
        <label>Is Father College graduate?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Home_Parent_Guardian_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Home Parent/Guardian</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Independent_Minor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Independent Minor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Mobile_Parent_Guardian__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Mobile Parent/Guardian</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Mother_College_graduate__c</fullName>
        <label>Is Mother College graduate?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Other_Parent_Guardian__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Other Parent/Guardian</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_US_citizen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is US citizen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LSR_Focus_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LSR Focus Group</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>